--- a/src/styles.scss
+++ b/src/styles.scss
@@ -132,10 +132,10 @@ app-root {
   );
   padding-left: var(--safe-area-inset-left, env(safe-area-inset-left, 0px));
   padding-right: var(--safe-area-inset-right, env(safe-area-inset-right, 0px));
-  padding-bottom: var(
-    --safe-area-inset-bottom,
-    env(safe-area-inset-bottom, 0px)
-  );
+  // padding-bottom: var(
+  //   --safe-area-inset-bottom,
+  //   env(safe-area-inset-bottom, 0px)
+  // );
 
   box-sizing: border-box;
 
